--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ body div ul {
     </head>
 <body>
 
-    <h1>John Smith</h1>
+    <h1>Ortiz Pineda Alexis Imanol</h1>
 
     <p id="bio_left">
     (408) 555-1212<br />	<script type="text/javascript">email();</script>
