--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ body div ul {
     <h1>Ortiz Pineda Alexis Imanol</h1>
 
     <p id="bio_left">
-    (408) 555-1212<br />	<script type="text/javascript">email();</script>
+   +(52) 5551056948<br />	<script type="text/javascript">email();</script>
     </p>
     <p id="bio_right">
     123 doctor enrique gonzales<br />CDMX, CDMX 06400</p>
